crates/formatter/tests/snapshots/snapshots__coder__migrations__000265_default_values_for_notifications.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- https://github.com/coder/coder/issues/14893

-- UserAccountSuspended
update notification_templates
set
	body_template = E'Hi {{.UserName}},\n\n'
		|| -- Add a \n
		E'User account **{{.Labels.suspended_account_name}}** has been suspended.\n\n'
		||
		-- Use the conventional initiator label:
		E'The newly suspended account belongs to **{{.Labels.suspended_account_user_name}}** and was suspended by **{{.Labels.initiator}}**.'
where id = 'b02ddd82-4733-4d02-a2d7-c36f3598997d';

-- UserAccountActivated
update notification_templates
set
	body_template = E'Hi {{.UserName}},\n\n'
		|| -- Add a \n
		E'User account **{{.Labels.activated_account_name}}** has been activated.\n\n'
		||
		-- Use the conventional initiator label:
		E'The newly activated account belongs to **{{.Labels.activated_account_user_name}}** and was activated by **{{.Labels.initiator}}**.'
where id = '9f5af851-8408-4e73-a7a1-c6502ba46689';

-- UserAccountCreated
update notification_templates
set
	body_template = E'Hi {{.UserName}},\n\n'
		|| E'New user account **{{.Labels.created_account_name}}** has been created.\n\n'
		||
		-- Use the conventional initiator label:
		E'This new user account was created for **{{.Labels.created_account_user_name}}** by **{{.Labels.initiator}}**.'
where id = '4e19c0ac-94e1-4532-9515-d1801aa283b2';

-- UserAccountDeleted
update notification_templates
set
	body_template = E'Hi {{.UserName}},\n\n'
		|| E'User account **{{.Labels.deleted_account_name}}** has been deleted.\n\n'
		||
		-- Use the conventional initiator label:
		E'The deleted account belonged to **{{.Labels.deleted_account_user_name}}** and was deleted by **{{.Labels.initiator}}**.'
where id = 'f44d9314-ad03-4bc8-95d0-5cad491da6b6';
