crates/formatter/tests/snapshots/snapshots__coder__migrations__000269_workspace_with_names.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view workspaces_expanded;
