crates/formatter/tests/snapshots/snapshots__coder__migrations__000272_remove_must_reset_password.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table users add column must_reset_password bool not null default false;
