crates/formatter/tests/snapshots/snapshots__coder__migrations__000272_remove_must_reset_password.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table users drop column must_reset_password;
